--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@testing-library/user-event": "^13.5.0",
     "eslint-config-react-app": "^7.0.1",
     "framer-motion": "^10.15.1",
+    "jest": "^27.5.1",
     "kill-port": "^2.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -30,7 +31,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
+    "test:coverage": "jest --coverage",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -52,6 +54,10 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "babel-jest": "^27.5.1",
+    "@babel/preset-env": "^7.21.0",
+    "@babel/preset-react": "^7.21.0",
+    "jest": "^27.5.1"
   }
 }
