--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "jest",
+    "test": "dotenv -e .env.test -- jest",
     "test:coverage": "jest --coverage",
     "eject": "react-scripts eject"
   },
@@ -54,10 +54,11 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.2",
-    "babel-jest": "^27.5.1",
     "@babel/preset-env": "^7.21.0",
     "@babel/preset-react": "^7.21.0",
-    "jest": "^27.5.1"
+    "babel-jest": "^27.5.1",
+    "dotenv-cli": "^8.0.0",
+    "jest": "^27.5.1",
+    "tailwindcss": "^3.3.2"
   }
 }
